force-app/main/default/objects/bt_stripe__Relationship_Settings__c/fields/bt_stripe__Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Account_Record_Type__c</fullName>
    <inlineHelpText>If a new Account is created, the defined Record Type will be used. If this field is blank, the org&apos;s default Account Record Type will be used.</inlineHelpText>
    <label>Account Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>