force-app/main/default/objects/bt_stripe__Relationship_Settings__c/fields/bt_stripe__Contact_Bucket_Account__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Contact_Bucket_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>When the Contact Account Rule field = Bucket Account, new Contacts will be added to this Account.</inlineHelpText>
    <label>Contact Bucket Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationship Settings</relationshipLabel>
    <relationshipName>Relationship_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>