force-app/main/default/objects/bt_stripe__Relationship_Settings__c/fields/bt_stripe__Create_Rule__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Create_Rule__c</fullName>
    <inlineHelpText>The type of related record to create if configured to do so.</inlineHelpText>
    <label>Create Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>