force-app/main/default/objects/bt_stripe__Relationship_Settings__c/fields/bt_stripe__Default__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>