force-app/main/default/objects/bt_stripe__Relationship_Settings__c/fields/bt_stripe__Relationship_Rule__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Relationship_Rule__c</fullName>
    <inlineHelpText>The rule for the logic to follow when a customer information could be matched to an existing Contact, Lead or Account record or created as a new record.</inlineHelpText>
    <label>Relationship Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only Relate A Matched Record</fullName>
            </value>
            <value>
                <fullName>Create New Record If No Match</fullName>
            </value>
            <value>
                <fullName>Always Create New Record</fullName>
            </value>
            <value>
                <fullName>No Matching Or Record Creation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>