force-app/main/default/objects/bt_stripe__Relationship_Settings__c/fields/bt_stripe__Set_All_Email_Fields__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Set_All_Email_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the matching logic will find all Email fields on the Match Record if a matching rule is active. For this to work, you will also need a custom OR Matching Rule in Salesforce for each Email field you have.</inlineHelpText>
    <label>Match All Email Fields</label>
    <type>Checkbox</type>
</CustomField>