force-app/main/default/objects/bt_stripe__Relationship_Settings__c/validationRules/bt_stripe__MatchRecordsIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>bt_stripe__MatchRecordsIsRequired</fullName>
    <active>true</active>
    <description>Checks that match record cannot be blank on specific criteria.</description>
    <errorConditionFormula>IF(OR( ISPICKVAL(bt_stripe__Relationship_Rule__c, &apos;Create New Record If No Match&apos;),ISPICKVAL(bt_stripe__Relationship_Rule__c, &apos;Only Relate A Matched Record&apos;)),IF(ISBLANK( bt_stripe__Match_Records__c ) , true,false),false)</errorConditionFormula>
    <errorDisplayField>bt_stripe__Match_Records__c</errorDisplayField>
    <errorMessage>The Match Records field is Required</errorMessage>
</ValidationRule>